# opencv_demo

./: 24ColorChecker  24ColorChecker.cpp  CMakeCache.txt  CMakeLists.txt  CameraCanny  CameraCanny.cpp  Depth.cpp  DisplayImage  DualCamera  DualCamera.cpp  FeaturePoint  ImageProc.cpp  ImageProc.h  LocalFeature.cpp  LocalFeature.h  Makefile  OpencvCal  OpencvCal.cpp  StereoMatch  StereoVision.cpp  StereoVision.h  calib_result.txt  cmake_install.cmake  exter.xml  extrinsics.xml  inter.xml  intrinsics.xml  main.cpp  mv.sh  stereo_calib.cpp  stereo_match.cpp
imagefiles/: extrinsics.xml  image.xml  intrinsics.xml
